added zipcode history + allow change to miles/km

--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,15 @@
   text-align: center;
   margin: 10px;
 }
+/* .buttonMI {
+  background-color: azure;
+}
+.buttonMI:active {
+  background-color: rgb(58, 255, 189);
+}
+.buttonKM {
+  background-color: azure;
+}
+.buttonKM:active {
+  background-color: rgb(58, 255, 189);
+} */
